Correción de vista mobile

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </nav>
 
     <main>
+        <h1> Recetas más vistas</h1> <br>
     <!-- <img src="img/.jpg" alt="portada de pagina" width="600" weight="600"> -->
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa nesciunt doloremque placeat, explicabo molestiae voluptas quia facere expedita rem ad neque sit rerum cumque id delectus soluta dolorem animi vitae.
 
