Se agrega animación y vista mobile anda pipi cucu.

--- a/index.html
+++ b/index.html
@@ -4,60 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title> Recetas BA MULTIPLICA </title>
 </head>
 
 <body class="grid-container">
     <header class="header">
                 <div class="header-flex">
-                        <h1>RECETAS BA MULTIPLICA </h1>
+                        <h1 class="animate__animated animate__bounce">RECETAS BA MULTIPLICA </h1>
 
-                        <h2> Las mejores recetas del país! </h2>
+                        <h2 class="animate__animated animate__bounce"> Las mejores recetas del país! </h2>
                 </div>
     </header>
 
     <nav class="navbar">
         <div class="navbar-flex">
 
-                <div> Inicio</div>
+                <div> <a href="index.html"> Inicio</a> </div>
 
-                <div>Lista de recetas</div>
+                <div> <a href="img/#"> Lista de recetas</a> </div>
 
-                <div> Contacto</div>
+                <div> <a href="pages/form.html"> Contacto</a>  </div>
 
-                <div> Preguntas frecuentes</div>
+                <div> <a href="pages/faq.html"> Preguntas frecuentes </a> </div>
 
         </div>
 
     </nav>
 
     <main class="main">
+        <div class="main-flex">
             <h1> Recetas más vistas</h1> <br>
-        <!-- <img src="img/.jpg" alt="portada de pagina" width="600" weight="600"> -->
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa nesciunt doloremque placeat, explicabo molestiae voluptas quia facere expedita rem ad neque sit rerum cumque id delectus soluta dolorem animi vitae.
+                
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa nesciunt doloremque placeat, explicabo molestiae voluptas quia facere expedita rem ad neque sit rerum cumque id delectus soluta dolorem animi vitae.
 
-        <h3> Quienes somos ? </h3>
-        <p> Somos Recetas Ba MULTIPLICA. Le traeremos cada semana una receta nueva. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Quasi, unde distinctio alias labore aperiam minima dicta ipsa reprehenderit illo dolore,
-            nostrum vel fugiat, debitis perferendis. Vitae sapiente adipisci facere minus! Para más información haga click
-            <a href="https://www.google.com.ar"> Para más información, haga click aquí.</a>
-        </p>
+                <h3> Quienes somos ? </h3>
+                <p> Somos Recetas Ba MULTIPLICA. Le traeremos cada semana una receta nueva. Lorem ipsum dolor sit amet, consectetur
+                    adipisicing elit. Quasi, unde distinctio alias labore aperiam minima dicta ipsa reprehenderit illo dolore,
+                    nostrum vel fugiat, debitis perferendis. Vitae sapiente adipisci facere minus! Para más información haga click
+                    <a href="https://www.google.com.ar"> Para más información, haga click aquí.</a>
+                </p>
 
-        <h1>Lista de recetas</h1>
-        <ul>
-            <li> Receta de pizza</li>
-            <li>Receta de guiso</li>
-            <li> Contactenos </li>
+                <h1>Lista de recetas</h1>
+                <ul>
+                    <li> Receta de pizza</li>
+                    <li>Receta de guiso</li>
+                    <li> Contactenos </li>
 
-        </ul>
-        <p><a href="https://www.recetasfacil.com" target="_blank">### Más recetas ###</a></p>
+                </ul>
+                <p><a href="https://www.recetasfacil.com" target="_blank">### Más recetas ###</a></p>
 
 
-        <h4>Dónde encontrarnos</h4>
-        <!-- <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3340664.6531042983!2d-70.08354461333688!3d-35.14744633020967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967ac38b23436269%3A0xfb1c61c30589c812!2zSGVsbOKAmXMgUGl6emE!5e0!3m2!1ses-419!2sar!4v1696804639025!5m2!1ses-419!2sar"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+        </div>
     </main>
     <footer class="footer">
            <div class="footer-flex">
