Se corrigen href de pages.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                 <div> <a href="index.html"> Inicio</a> </div>
 
-                <div> <a href="img/#"> Lista de recetas</a> </div>
+                <div> <a href="pages/content.html"> Lista de recetas</a> </div>
 
                 <div> <a href="pages/form.html"> Contacto</a>  </div>
 
