--- a/pages/form.html
+++ b/pages/form.html
@@ -1,12 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    <title> Recetas BA MULTIPLICA </title>
 </head>
-<body>
-    asdddddasdasd
-    
+
+<body class="grid-container">
+    <header class="header">
+                <div class="header-flex">
+                        <h1 class="animate__animated animate__bounce">RECETAS BA MULTIPLICA </h1>
+
+                        <h2 class="animate__animated animate__bounce"> Las mejores recetas del país! </h2>
+                </div>
+    </header>
+
+    <nav class="navbar">
+        <div class="navbar-flex">
+
+                <div> <a href="../index.html"> Inicio</a> </div>
+
+                <div> <a href="content.html"> Lista de recetas</a> </div>
+
+                <div> <a href="form.html"> Contacto</a>  </div>
+
+                <div> <a href="faq.html"> Preguntas frecuentes </a> </div>
+
+        </div>
+
+    </nav>
+
+    <main class="main">
+        <div class="main-flex">
+            <h1> Recetas más vistas</h1> <br>
+                
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa nesciunt doloremque placeat, explicabo molestiae voluptas quia facere expedita rem ad neque sit rerum cumque id delectus soluta dolorem animi vitae.
+
+                <h3> Quienes somos ? </h3>
+                <p> Somos Recetas Ba MULTIPLICA. Le traeremos cada semana una receta nueva. Lorem ipsum dolor sit amet, consectetur
+                    adipisicing elit. Quasi, unde distinctio alias labore aperiam minima dicta ipsa reprehenderit illo dolore,
+                    nostrum vel fugiat, debitis perferendis. Vitae sapiente adipisci facere minus! Para más información haga click
+                    <a href="https://www.google.com.ar"> Para más información, haga click aquí.</a>
+                </p>
+
+                <h1>Lista de recetas</h1>
+                <ul>
+                    <li> Receta de pizza</li>
+                    <li>Receta de guiso</li>
+                    <li> Contactenos </li>
+
+                </ul>
+                <p><a href="https://www.recetasfacil.com" target="_blank">### Más recetas ###</a></p>
+
+
+        </div>
+    </main>
+    <footer class="footer">
+           <div class="footer-flex">
+                                 2023© BA MULTIPLICA - Comisión 46
+           </div>
+    </footer>
 </body>
+
 </html>
