Se realizaron correciones semanticas al index y detalles a la hoja de estilos

--- a/pages/form.html
+++ b/pages/form.html
@@ -15,6 +15,7 @@
                         <h1 class="animate__animated animate__bounce">RECETAS BA MULTIPLICA </h1>
 
                         <h2 class="animate__animated animate__bounce"> Las mejores recetas del país! </h2>
+                        <div> Logo</div>
                 </div>
     </header>
 
