--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                         <h1 class="animate__animated animate__bounce">RECETAS BA MULTIPLICA </h1>
 
                         <h2 class="animate__animated animate__bounce"> Las mejores recetas del país! </h2>
+
+                        <div> <img src="img/logo.jpeg" alt="logo" height="50px"> </div>
                 </div>
     </header>
 
@@ -46,11 +48,6 @@
                     <a href="https://www.google.com.ar"> Para más información, haga click aquí.</a>
                 </p>
 
-                <h1>Lista de recetas</h1>
-                <ul>
-                    <li> Receta de pizza</li>
-                    <li>Receta de guiso</li>
-                    <li> Contactenos </li>
 
                 </ul>
                 <p><a href="https://www.recetasfacil.com" target="_blank">### Más recetas ###</a></p>
