Se agrega favicon y correcion a las medias.

--- a/pages/form.html
+++ b/pages/form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style_form.css">
+    <link rel="icon" href="../img/favicon/favicon.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
     <title> Recetas BA MULTIPLICA </title>
@@ -69,7 +70,7 @@
                 </fieldset>
             </div>      
             <br> <br>
-            <h3>Ubicación de nuestro local</h3><br><br>
+            <h3>Ubicación de nuestro local</h3>
             <div class="receta2">
 
                 <iframe width="300" height="300" style="border:0"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.5107480042525!2d-58.358978724767994!3d-34.6670568608452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a33346fb35a30d%3A0x5832aab74661c2ad!2sAv.%20Bartolom%C3%A9%20Mitre%201660%2C%20B1873AMB%20Crucecita%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1692195141424!5m2!1ses-419!2sar" width="400" height="200" style="border:0;" allowfullscreen="auto" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            
