--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="../img/favicon/favicon.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
     <title> Recetas BA MULTIPLICA </title>
 </head>
 
+<!-- -------------------------- Grid general --------------- -->
 <body class="grid-container">
-    <header class="header">
+    <!-- -------------------------- Header --------------- -->
+      <header class="header">
+        <!-- -------------------------- Flex del header  --------------- -->
                 <div class="header-flex">
                         <h1 class="animate__animated animate__bounce">RECETAS BA MULTIPLICA </h1>
 
@@ -18,9 +22,10 @@
 
                         <div> <img src="img/logo.jpeg" alt="logo" height="40px"> </div>
                 </div>
-    </header>
-
+        </header>
+<!-- -------------------------- Navbar --------------- -->
     <nav class="navbar">
+        <!-- -------------------------- Navbar flex --------------- -->
         <div class="navbar-flex">
 
                 <div> <a href="index.html"> Inicio</a> </div>
@@ -34,8 +39,9 @@
         </div>
 
     </nav>
-
+<!-- -------------------------- Main --------------- -->
     <main class="main">
+        <!-- -------------------------- Main grid  --------------- -->
         <div class="main-grid">
 
 
@@ -50,15 +56,6 @@
             <div class="receta3">  <img src="img/empanadas.jpg" alt="imagen_empanada" height="100px" width="150"> <p> Receta de empanadas</p> </div>
             <br>            
                              
-
-
-
-
-
-
-
-
-
 
                 <h3> Quienes somos ? </h3>
                 <p> Somos Recetas Ba MULTIPLICA. Le traeremos cada semana una receta nueva. Lorem ipsum dolor sit amet, consectetur
